tests/ui/occurs-check.stderr
error[E0275]: overflow setting `Box<_>` to a subtype of `_`
  --> $DIR/occurs-check.rs:3:9
   |
LL |     f = Box::new(f);
   |         ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
